src/include/rados/librados.h


#define LIBRADOS_CREATE_EXCLUSIVE 1
#define LIBRADOS_CREATE_IDEMPOTENT 0
enum librados_op_flag {
  LIBRADOS_OP_FLAG_EXCL               =  0x1,
  LIBRADOS_OP_FLAG_FAILOK 	      = 0x2,
  LIBRADOS_OP_FLAG_FADVISE_RANDOM     = 0x4,
  LIBRADOS_OP_FLAG_FADVISE_SEQUENTIAL = 0x8,
  LIBRADOS_OP_FLAG_FADVISE_WILLNEED   = 0x10,
  LIBRADOS_OP_FLAG_FADVISE_DONTNEED   = 0x20,
  LIBRADOS_OP_FLAG_FADVISE_NOCACHE    = 0x40,
  LIBRADOS_OP_FLAG_FADVISE_FUA        = 0x80,
};
enum librados_cmpxattr_op {
	LIBRADOS_CMPXATTR_OP_EQ  = 1,
	LIBRADOS_CMPXATTR_OP_NE  = 2,
	LIBRADOS_CMPXATTR_OP_GT  = 3,
	LIBRADOS_CMPXATTR_OP_GTE = 4,
	LIBRADOS_CMPXATTR_OP_LT  = 5,
	LIBRADOS_CMPXATTR_OP_LTE = 6
};
enum librados_operation {
  LIBRADOS_OPERATION_NOFLAG             = 0,
  LIBRADOS_OPERATION_BALANCE_READS      = 1,
  LIBRADOS_OPERATION_LOCALIZE_READS     = 2,
  LIBRADOS_OPERATION_ORDER_READS_WRITES = 4,
  LIBRADOS_OPERATION_IGNORE_CACHE       = 8,
  LIBRADOS_OPERATION_SKIPRWLOCKS        = 16,
  LIBRADOS_OPERATION_IGNORE_OVERLAY     = 32,
  LIBRADOS_OPERATION_FULL_TRY           = 64,
  LIBRADOS_OPERATION_FULL_FORCE		= 128,
  LIBRADOS_OPERATION_IGNORE_REDIRECT	= 256,
  LIBRADOS_OPERATION_ORDERSNAP          = 512,
  LIBRADOS_OPERATION_RETURNVEC          = 1024,
};
#define LIBRADOS_SNAP_HEAD  UINT64_C(-2)
typedef void *rados_t;
typedef void *rados_config_t;
typedef void *rados_ioctx_t;
typedef void *rados_list_ctx_t;
typedef uint64_t rados_snap_t;
typedef void *rados_xattrs_iter_t;
typedef void *rados_omap_iter_t;
struct rados_pool_stat_t {
  uint64_t num_bytes;
  uint64_t num_kb;
  uint64_t num_objects;
  uint64_t num_object_clones;
  uint64_t num_object_copies;
  uint64_t num_objects_missing_on_primary;
  uint64_t num_objects_unfound;
  uint64_t num_objects_degraded;
  uint64_t num_rd;
  uint64_t num_rd_kb;
  uint64_t num_wr;
  uint64_t num_wr_kb;
  uint64_t num_user_bytes;
  uint64_t compressed_bytes_orig;
  uint64_t compressed_bytes;
  uint64_t compressed_bytes_alloc;
};
struct rados_cluster_stat_t {
  uint64_t kb;
  uint64_t kb_used;
  uint64_t kb_avail;
  uint64_t num_objects;
};
typedef void *rados_write_op_t;
typedef void *rados_read_op_t;
typedef void *rados_completion_t;
CEPH_RADOS_API void rados_version(int *major, int *minor, int *extra);
CEPH_RADOS_API int rados_create2(rados_t *pcluster,
                                 const char *const clustername,
                                 const char * const name, uint64_t flags);
CEPH_RADOS_API int rados_create_with_context(rados_t *cluster,
                                             rados_config_t cct);
CEPH_RADOS_API int rados_ping_monitor(rados_t cluster, const char *mon_id,
                                      char **outstr, size_t *outstrlen);
CEPH_RADOS_API int rados_connect(rados_t cluster);
CEPH_RADOS_API void rados_shutdown(rados_t cluster);
CEPH_RADOS_API int rados_conf_read_file(rados_t cluster, const char *path);
CEPH_RADOS_API int rados_conf_parse_argv_remainder(rados_t cluster, int argc,
				                   const char **argv,
                                                   const char **remargv);
CEPH_RADOS_API int rados_conf_parse_env(rados_t cluster, const char *var);
CEPH_RADOS_API int rados_conf_set(rados_t cluster, const char *option,
                                  const char *value);
CEPH_RADOS_API int rados_conf_get(rados_t cluster, const char *option,
                                  char *buf, size_t len);
CEPH_RADOS_API int rados_cluster_stat(rados_t cluster,
                                      struct rados_cluster_stat_t *result);
CEPH_RADOS_API int rados_cluster_fsid(rados_t cluster, char *buf, size_t len);
CEPH_RADOS_API int rados_wait_for_latest_osdmap(rados_t cluster);
CEPH_RADOS_API int rados_pool_list(rados_t cluster, char *buf, size_t len);
CEPH_RADOS_API int rados_inconsistent_pg_list(rados_t cluster, int64_t pool,
					      char *buf, size_t len);
CEPH_RADOS_API uint64_t rados_get_instance_id(rados_t cluster);
CEPH_RADOS_API int rados_ioctx_create(rados_t cluster, const char *pool_name,
                                      rados_ioctx_t *ioctx);
CEPH_RADOS_API int rados_ioctx_create2(rados_t cluster, int64_t pool_id,
                                       rados_ioctx_t *ioctx);
CEPH_RADOS_API void rados_ioctx_destroy(rados_ioctx_t io);
CEPH_RADOS_API rados_t rados_ioctx_get_cluster(rados_ioctx_t io);
CEPH_RADOS_API int rados_ioctx_pool_stat(rados_ioctx_t io,
                                         struct rados_pool_stat_t *stats);
CEPH_RADOS_API int64_t rados_pool_lookup(rados_t cluster,
                                         const char *pool_name);
CEPH_RADOS_API int rados_pool_reverse_lookup(rados_t cluster, int64_t id,
                                             char *buf, size_t maxlen);
CEPH_RADOS_API int rados_pool_create(rados_t cluster, const char *pool_name);
CEPH_RADOS_API int rados_pool_create_with_auid(rados_t cluster,
                                               const char *pool_name,
                                               uint64_t auid)
  __attribute__((deprecated));
CEPH_RADOS_API int rados_pool_create_with_crush_rule(rados_t cluster,
                                                     const char *pool_name,
				                     uint8_t crush_rule_num);
CEPH_RADOS_API int rados_pool_create_with_all(rados_t cluster,
                                              const char *pool_name,
                                              uint64_t auid,
			                      uint8_t crush_rule_num)
  __attribute__((deprecated));
CEPH_RADOS_API int rados_pool_get_base_tier(rados_t cluster, int64_t pool,
                                            int64_t* base_tier);
CEPH_RADOS_API int rados_pool_delete(rados_t cluster, const char *pool_name);
CEPH_RADOS_API int rados_ioctx_pool_requires_alignment2(rados_ioctx_t io,
  int *req);
CEPH_RADOS_API int rados_ioctx_pool_required_alignment2(rados_ioctx_t io,
  uint64_t *alignment);
CEPH_RADOS_API void rados_ioctx_locator_set_key(rados_ioctx_t io,
                                                const char *key);
CEPH_RADOS_API void rados_ioctx_set_namespace(rados_ioctx_t io,
                                              const char *nspace);
CEPH_RADOS_API int rados_nobjects_list_open(rados_ioctx_t io,
                                            rados_list_ctx_t *ctx);
CEPH_RADOS_API int rados_nobjects_list_next(rados_list_ctx_t ctx,
                                            const char **entry,
	                                    const char **key,
                                            const char **nspace);
CEPH_RADOS_API void rados_nobjects_list_close(rados_list_ctx_t ctx);
CEPH_RADOS_API uint64_t rados_get_last_version(rados_ioctx_t io);
CEPH_RADOS_API int rados_write(rados_ioctx_t io, const char *oid,
                               const char *buf, size_t len, uint64_t off);
CEPH_RADOS_API int rados_write_full(rados_ioctx_t io, const char *oid,
                                    const char *buf, size_t len);
CEPH_RADOS_API int rados_writesame(rados_ioctx_t io, const char *oid,
                                   const char *buf, size_t data_len,
                                   size_t write_len, uint64_t off);
CEPH_RADOS_API int rados_append(rados_ioctx_t io, const char *oid,
                                const char *buf, size_t len);
CEPH_RADOS_API int rados_read(rados_ioctx_t io, const char *oid, char *buf,
                              size_t len, uint64_t off);
CEPH_RADOS_API int rados_remove(rados_ioctx_t io, const char *oid);
CEPH_RADOS_API int rados_trunc(rados_ioctx_t io, const char *oid,
                               uint64_t size);
CEPH_RADOS_API int rados_cmpext(rados_ioctx_t io, const char *o,
                                const char *cmp_buf, size_t cmp_len,
                                uint64_t off);
CEPH_RADOS_API int rados_getxattr(rados_ioctx_t io, const char *o,
                                  const char *name, char *buf, size_t len);
CEPH_RADOS_API int rados_setxattr(rados_ioctx_t io, const char *o,
                                  const char *name, const char *buf,
                                  size_t len);
CEPH_RADOS_API int rados_rmxattr(rados_ioctx_t io, const char *o,
                                 const char *name);
CEPH_RADOS_API int rados_getxattrs(rados_ioctx_t io, const char *oid,
                                   rados_xattrs_iter_t *iter);
CEPH_RADOS_API int rados_getxattrs_next(rados_xattrs_iter_t iter,
                                        const char **name, const char **val,
                                        size_t *len);
CEPH_RADOS_API void rados_getxattrs_end(rados_xattrs_iter_t iter);
CEPH_RADOS_API int rados_stat(rados_ioctx_t io, const char *o, uint64_t *psize,
                              time_t *pmtime);
typedef void (*rados_callback_t)(rados_completion_t cb, void *arg);
typedef void (*rados_watchcb2_t)(void *arg,
				 uint64_t notify_id,
				 uint64_t handle,
				 uint64_t notifier_id,
				 void *data,
				 size_t data_len);
  typedef void (*rados_watcherrcb_t)(void *pre, uint64_t cookie, int err);
CEPH_RADOS_API int rados_blocklist_add(rados_t cluster,
				       char *client_address,
				       uint32_t expire_seconds);
CEPH_RADOS_API int rados_getaddrs(rados_t cluster, char** addrs);
CEPH_RADOS_API void rados_set_pool_full_try(rados_ioctx_t io);
CEPH_RADOS_API void rados_unset_pool_full_try(rados_ioctx_t io);
CEPH_RADOS_API int rados_application_enable(rados_ioctx_t io,
                                            const char *app_name, int force);
CEPH_RADOS_API int rados_application_list(rados_ioctx_t io, char *values,
                                          size_t *values_len);
CEPH_RADOS_API int rados_application_metadata_get(rados_ioctx_t io,
                                                  const char *app_name,
                                                  const char *key, char *value,
                                                  size_t *value_len);
CEPH_RADOS_API int rados_application_metadata_set(rados_ioctx_t io,
                                                  const char *app_name,
                                                  const char *key,
                                                  const char *value);
CEPH_RADOS_API int rados_application_metadata_remove(rados_ioctx_t io,
                                                     const char *app_name,
                                                     const char *key);
CEPH_RADOS_API int rados_application_metadata_list(rados_ioctx_t io,
                                                   const char *app_name,
                                                   char *keys, size_t *key_len,
                                                   char *values,
                                                   size_t *vals_len);
CEPH_RADOS_API int rados_mon_command(rados_t cluster, const char **cmd,
                                     size_t cmdlen, const char *inbuf,
                                     size_t inbuflen, char **outbuf,
                                     size_t *outbuflen, char **outs,
                                     size_t *outslen);
CEPH_RADOS_API int rados_mgr_command(rados_t cluster, const char **cmd,
                                     size_t cmdlen, const char *inbuf,
                                     size_t inbuflen, char **outbuf,
                                     size_t *outbuflen, char **outs,
                                     size_t *outslen);
CEPH_RADOS_API int rados_mgr_command_target(
  rados_t cluster,
  const char *name,
  const char **cmd,
  size_t cmdlen, const char *inbuf,
  size_t inbuflen, char **outbuf,
  size_t *outbuflen, char **outs,
  size_t *outslen);
CEPH_RADOS_API int rados_mon_command_target(rados_t cluster, const char *name,
			                    const char **cmd, size_t cmdlen,
			                    const char *inbuf, size_t inbuflen,
			                    char **outbuf, size_t *outbuflen,
			                    char **outs, size_t *outslen);
CEPH_RADOS_API void rados_buffer_free(char *buf);
CEPH_RADOS_API int rados_osd_command(rados_t cluster, int osdid,
                                     const char **cmd, size_t cmdlen,
		                     const char *inbuf, size_t inbuflen,
		                     char **outbuf, size_t *outbuflen,
		                     char **outs, size_t *outslen);
CEPH_RADOS_API int rados_pg_command(rados_t cluster, const char *pgstr,
                                    const char **cmd, size_t cmdlen,
		                    const char *inbuf, size_t inbuflen,
		                    char **outbuf, size_t *outbuflen,
		                    char **outs, size_t *outslen);
typedef void (*rados_log_callback_t)(void *arg,
				     const char *line,
				     const char *who, 
				     uint64_t sec, uint64_t nsec,
				     uint64_t seq, const char *level,
				     const char *msg);
typedef void (*rados_log_callback2_t)(void *arg,
				     const char *line,
				     const char *channel,
				     const char *who,
				     const char *name,
				     uint64_t sec, uint64_t nsec,
				     uint64_t seq, const char *level,
				     const char *msg);
CEPH_RADOS_API int rados_monitor_log(rados_t cluster, const char *level,
                                     rados_log_callback_t cb, void *arg);
CEPH_RADOS_API int rados_monitor_log2(rados_t cluster, const char *level,
				      rados_log_callback2_t cb, void *arg);
CEPH_RADOS_API int rados_service_register(
  rados_t cluster,
  const char *service,
  const char *daemon,
  const char *metadata_dict);
CEPH_RADOS_API int rados_service_update_status(
  rados_t cluster,
  const char *status_dict);